--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -6,8 +6,9 @@
       /* Email styles need to be inline */
     </style>
   </head>
-
   <body>
-    <%= yield %>
-  </body>
+    <div class = "container">
+      <%= yield %>
+    </body>
+  </div>
 </html>
