--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,18 @@
-<div class="container">
-  <h1><%= @article.title %></h1>
+<h1><%= @article.title %></h1>
 
-  <p><%= @article.body %></p>
+<p><%= @article.body %></p>
 
-  <%= link_to "Back", articles_path %>
-  <%= link_to "Edit", edit_article_path(@article) %>
-  <%= link_to "Delete", article_path(@article), data: { turbo_method: :delete, turbo_confirm: "You sure?"} %>
-</div>
+<ul>
+  <li><%= link_to "Edit", edit_article_path(@article) %></li>
+  <li><%= link_to "Delete", article_path(@article), data: {
+                    turbo_method: :delete,
+                    turbo_confirm: "Yu sure?"
+                  } %></li>
+  <li><%= link_to "Back", articles_path %></li>
+</ul>
+
+<h2>Comments</h2>
+<%= render @article.comments %>
+
+<h2>Add a comment:</h2>
+<%= render 'comments/form' %>
